--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,6 +20,7 @@
    <link rel="stylesheet" href="/static/css/base.css">
    <link rel="stylesheet" href="/static/css/vendor.css">
    <link rel="stylesheet" href="/static/css/main.css">
+   <link rel="stylesheet" href="/static/home.css">
 
 
    <!-- script
