--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -17,6 +17,7 @@
 
  	<!-- CSS
    ================================================== -->
+   <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="/static/css/base.css">
    <link rel="stylesheet" href="/static/css/vendor.css">
    <link rel="stylesheet" href="/static/css/main.css">
