--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -170,10 +170,10 @@
             {% endfor %}
             </ul>
 
-						<div class="row block-1-2 block-tab-full">
+						<div>
               <h2>Awards</h2>
               {% for level, type in user.awards %}
-							<div class="bgrid">
+							<div>
 								<h3>{{ level }} {{ type }} Award</h3>
 								<p><img src="/static/{{ level }}-{{ type }}.gif" width="200px" height="200px"></p>
 							</div>
