--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -125,26 +125,26 @@
 						<p>079647459</p>
             <div>
               <h2>Current Progress</h2>
-                  <div><img src="Gold-Commitment.png" style="margin-left: 0; margin-right: 20px; height:200px"></div>
+                  <div><img src="/static/images/Gold-Commitment.png" style="margin-left: 0; margin-right: 20px; height:200px"></div>
                   <div><h3>GOLD Tier Volunteer</h3><h5 style="margin: 0">400 hrs logged</h5><progress class="" max="100" value="60" style="height: 15px; width: 500px; display: block;"></progress><h5>60 hrs until PLATINUM</h5></div>
             </div>
 						<div>
               <h2>Awards</h2>
 							<div style="display: inline-block; margin-right: 20px">
 								<h3>Bronze Social Award</h3>
-								<p><img src="Bronze-Social.gif" width="200px" height="200px"></p>
+								<p><img src="/static/images/Bronze-Social.gif" width="200px" height="200px"></p>
 							</div>
               <div style="display: inline-block; margin-right: 20px">
 								<h3>Bronze Social Award</h3>
-								<p><img src="Bronze-Social.gif" width="200px" height="200px"></p>
+								<p><img src="/static/images/Bronze-Social.gif" width="200px" height="200px"></p>
 							</div>
               <div style="display: inline-block; margin-right: 20px">
 								<h3>Bronze Social Award</h3>
-								<p><img src="Bronze-Social.gif" width="200px" height="200px"></p>
+								<p><img src="/static/images/Bronze-Social.gif" width="200px" height="200px"></p>
 							</div>
               <div style="display: inline-block; margin-right: 20px">
 								<h3>Bronze Social Award</h3>
-								<p><img src="Bronze-Social.gif" width="200px" height="200px"></p>
+								<p><img src="/static/images/Bronze-Social.gif" width="200px" height="200px"></p>
 							</div>
 
 						</div>
@@ -190,9 +190,9 @@
 
    <!-- Java Script
    ================================================== -->
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
+   <script src="/static/js/jquery-2.1.3.min.js"></script>
+   <script src="/static/js/plugins.js"></script>
+   <script src="/static/js/main.js"></script>
 
 </body>
 
