--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -123,7 +123,7 @@
             <h6>Email</h6>
 						<p>{{ user.profile.email }}</p>
             {% endif %}
-            {% if user.profile.phone}
+            {% if user.profile.phone %}
             <h6>Phone number</h6>
 						<p>079647459</p>
             {% endif %}
