--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -132,9 +132,9 @@
               {% if user.tier != "ROOKIE" %}
                   <div><img src="/static/images/{{ user.tier_img }}.png" style="margin-left: 0; margin-right: 20px; height:200px"></div>
               {% endif %}
-                  <div><h3>{{ user.tier }} Tier Volunteer</h3><h5 style="margin: 0">{{ user.profile.total_hours }} hrs logged</h5>{% if user.tier != "GOLD" %}<progress class="" max="100" value="{{ user.progress_value }}" style="height: 15px; width: 500px; display: block;"></progress><h5>{{ user.hours_difference }} hrs until {{ user.word_right }}</h5>{% endif %}</div>
+                  <div><h3>{{ user.tier }} Tier Volunteer</h3><h5 style="margin: 0">{{ user.profile.total_hours }} hrs logged</h5>{% if user.tier != "GOLD" %}<progress class="" max="100" value="{{ user.progress_value }}" style="height: 15px; width: 500px; display: block;"></progress><h5 style="margin: 0">{{ user.hours_difference }} hrs until {{ user.word_right }}</h5>{% endif %}</div>
             </div>
-						<div>
+						<div style="margin-top: 12px">
               <h2>Awards</h2>
 							<div style="display: inline-block; margin-right: 20px">
 								<h3>Bronze Social Award</h3>
