--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -36,27 +36,27 @@
   <style>
   * { font-family: 'Karla', sans-serif !important; }
     progress.bronze[value]::-moz-progress-bar {
-        background-color: #cd7f32;
+        background-color: #cd7f32 !important;
     }
 
     progress.bronze[value]::-webkit-progress-value {
-        background-color: #cd7f32;
+        background-color: #cd7f32 !important;
     }
 
     progress.silver[value]::-moz-progress-bar {
-        background-color: #C0C0C0;
+        background-color: #C0C0C0 !important;
     }
 
     progress.silver[value]::-webkit-progress-value {
-        background-color: #C0C0C0;
+        background-color: #C0C0C0 !important;
     }
 
     progress.gold[value]::-moz-progress-bar {
-        background-color: #FFD700;
+        background-color: #FFD700 !important;
     }
 
     progress.gold[value]::-webkit-progress-value {
-        background-color: #FFD700;
+        background-color: #FFD700 !important;
     }
   </style>
 
