--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -44,10 +44,12 @@
 
   progress[value]::-webkit-progress-bar {
       background-color: rgb(255, 255, 255);
+      border: 1px solid rgb(0, 0, 0);
   }
 
   progress[value]::-moz-progress-bar {
       background-color: rgb(255, 255, 255);
+      border: 1px solid rgb(0, 0, 0);
   }
 
     progress.bronze[value]::-moz-progress-bar {
