--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -174,6 +174,7 @@
               {% endif %}
                   <div><h3>{{ user.tier }} Tier Volunteer</h3><h5 style="margin: 0">{{ user.profile.total_hours }} hrs logged</h5>{% if user.tier != "GOLD" %}<progress id="progressbar" class="{{ user.color }}" max="100" value="{{ user.progress_value }}" style="height: 15px; width: 500px; display: block;"></progress><h5 style="margin: 0">{{ user.hours_difference }} hrs until {{ user.word_right }}</h5>{% endif %}</div>
             </div>
+            {% if user.awards %}
 						<div style="margin-top: 12px">
               <h2>Awards</h2>
               {% for level, type in user.awards %}
@@ -183,6 +184,7 @@
 							</div>
               {% endfor %}
 						</div>
+            {% endif %}
 
 					</div>
 
