--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -184,6 +184,8 @@
 							</div>
               {% endfor %}
 						</div>
+            {% else %}
+            <p>You have not yet earned any awards.</p>
             {% endif %}
 
 					</div>
