--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -185,6 +185,7 @@
               {% endfor %}
 						</div>
             {% else %}
+            <h2>Awards</h2>
             <p>You have not yet earned any awards.</p>
             {% endif %}
 
