--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -180,7 +180,7 @@
               {% for level, type in user.awards %}
 							<div style="display: inline-block; margin-right: 20px">
 								<h3>{{ level }} {{ type }} Award</h3>
-								<p><img src="/static/images/{{ level }}-{{ type }}.gif" width="200px" height="200px"></p>
+								<p><img src="/static/images/{{ level }}-{{ type }}.gif" style="height: 200px"></p>
 							</div>
               {% endfor %}
               {% else %}
