--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -95,16 +95,20 @@
 
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="index.html" title="">Home</a></li>
+					<li><a href="/" title="">Home</a></li>
 					<li class="has-children">
-						<a href="category.html" title="">Categories</a>
+            {% if request.user.is_authenticated %}
+            <a href="/users/logout/" title="">Logout</a>
+            {% else %}
+						<a href="/users/login/" title="">Login</a>
+            <a href="/users/signup/" title="">Signup</a>
+            {% endif %}
 						<ul class="sub-menu">
-			            <li><a href="category.html">Wordpress</a></li>
-			            <li><a href="category.html">HTML</a></li>
-			            <li><a href="category.html">Photography</a></li>
-			            <li><a href="category.html">UI</a></li>
-			            <li><a href="category.html">Mockups</a></li>
-			            <li><a href="category.html">Branding</a></li>
+			            <li><a href="{% url 'view_user_profile' username=request.user.username %}">My Profile</a></li>
+			            <li><a href="/users/groups/create/">Create Group</a></li>
+			            <li><a href="{% url 'my_groups' username=request.user.username %}">My Groups</a></li>
+			            <li><a href="/projects/myprojects/">My Projects</a></li>
+			            <li><a href="/users/leaderboard/">Leaderboard</a></li>
 			         </ul>
 					</li>
 					<li class="has-children">
